--- a/accounts/templates/accounts/dashbord.html
+++ b/accounts/templates/accounts/dashbord.html
@@ -64,6 +64,7 @@
 
 
         <div class=" row mx-0 no-gutters p-3"  id="#timeline">
+        {%if posts != null %}
             {% for p in posts %}
                 <div class="col-3  mb-3" id="#sender-image">
                 <img src="{{ p.author.profile_photo.url }}" style="object-fit: cover" class="profile-photo">
@@ -101,6 +102,8 @@
                         </div>
                         </li>
                     {% endfor %}
+                                {% endif %}
+
                 </ul>
             </div>
 
